fix pad glyph alignment

--- a/site/styles.css
+++ b/site/styles.css
@@ -1042,7 +1042,7 @@ option,
 .glyph-button {
     font-family: "Code Font", monospace;
     font-size: 0.85em;
-    padding: 0.045em;
+    padding: 0.043em;
     margin: 0em;
     background-color: transparent;
 }
